--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,10 +25,17 @@
         "prettier"
     ],
     "rules": {
+      "prettier/prettier": "error",
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn",
       "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
       "import/prefer-default-export": "off",
+      "@typescript-eslint/explicit-function-return-type": [
+        "error",
+        {
+          "allowExpressions": true
+        }
+      ],
       "camelcase": "off",
       "@typescript-eslint/ban-types": "off",
       "import/extensions": [
@@ -39,8 +46,7 @@
           "tsx": "never"
         }
      ],
-     "no-use-before-define": "off",
-      "prettier/prettier": "error"
+     "no-use-before-define": "off"
     },
     "settings": {
       "import/resolver": {
